src/test/resources/org/nest/nestml/_cocos/invalid/varDefinedMultipleTimes.simple
module org.nest.spl._cocos.varDefinedMultipleTimes
z real
if 1>0 :
  x real # reports error
  z real
  x real # reports error
end

x real
while true:
  x real
  z real # reports error
  z real # reports error
end

t real
h integer
for h in 0 ... 10 step 1:
  t integer # reports error
  t integer # reports error
end
